fix some spacing and devToolbar gone

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -24,7 +24,7 @@
       --foreground: 95% 0 0;
       --border: 39.5% 0 0;
       --card: 44% 0 0;
-      --card-hover: 32% 0 0;
+      --card-hover: 21% 0 0;
       --globe: 15% 0 0;
     }
   }
